--- a/ejecicioJS.html
+++ b/ejecicioJS.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         const distancia = prompt("ingrese una distancia");
-        if (distance <=1000 ){
+        if (distancia <=1000 ){
             document.write ("la distancia debe ser recorrida a pie");
         }
         else if (distancia <=10000){
